--- a/src/css/PrivacyPolicy.css
+++ b/src/css/PrivacyPolicy.css
@@ -1,5 +1,5 @@
 .privacy-container {
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 0 auto;
     padding: 40px 20px;
     font-family: Arial, sans-serif;
