--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -10,8 +10,8 @@
   width: 100%;
   top: 0;
   left: 0;
-  max-width: auto; /* Prevent navbar from stretching */
-  margin: 0 auto; /* Center navbar */
+  /* max-width: auto; */
+  margin: 0 auto; 
   z-index: 1000;
   background: linear-gradient(135deg, rgba(51, 51, 51, 0.8), rgba(25, 25, 25, 0.8));
   backdrop-filter: blur(10px);
@@ -21,13 +21,14 @@
 
 /* Ensure body content is not covered by fixed navbar */
 body {
-  padding-top: 70px; /* Adjust based on navbar height */
+  padding-top: 100px;
 }
 
 /* Logo Styling */
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
+  
 }
 
 /* Navigation Links */
