--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,56 +2,67 @@
 
 /* Links */
 .hover-link {
-    color: rgb(255, 255, 255); /* Default text color */
-    text-decoration: none;
-    transition: color 0.3s ease, transform 0.3s ease;
-  }
-  
-  .hover-link:hover {
-    color: #FFD700; /* Gold color on hover */
-    transform: translateY(-3px);
-    transition: color 0.3s ease, transform 0.3s ease;
-  }
-  
-  /* Social Icons */
-  .hover-icon {
-    display: inline-block;
-    position: relative;
-    transition: transform 0.3s ease, background 0.3s ease;
-    padding: 10px;
-    border-radius: 50%;
-    overflow: hidden;
-  }
-  
-  .hover-icon svg {
-    font-size: 26px;
-    color: white;
-    transition: color 0.3s ease, transform 0.3s ease;
-  }
-  
-  /* Glossy hover effect */
-  .hover-icon::before {
-    content: "";
-    position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 200%;
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 10%, rgba(255, 255, 255, 0) 70%);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  
-  .hover-icon:hover::before {
-    opacity: 1;
-  }
-  
-  .hover-icon:hover {
-    transform: scale(1.2);
-    background: linear-gradient(135deg, rgba(255, 215, 0, 0.6), rgba(255, 140, 0, 0.6));
-  }
-  
-  .hover-icon:hover svg {
-    color: black !important; /* Change icon color on hover */
-  }
-  
+  color: rgb(255, 255, 255);
+  /* Default text color */
+  text-decoration: none;
+  transition: color 0.3s ease, transform 0.3s ease;
+  padding: 5px;
+  border-radius: 4px;
+  margin: 5px 0;
+  display: inline-block;
+}
+
+.hover-link:hover {
+  color: #00FF00;
+  /* Green color on hover */
+  transform: translateY(-3px);
+  transition: color 0.3s ease, transform 0.3s ease;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Social Icons */
+.hover-icon {
+  display: inline-block;
+  position: relative;
+  transition: transform 0.3s ease, background 0.3s ease;
+  padding: 10px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 5px;
+}
+
+.hover-icon svg {
+  font-size: 26px;
+  color: white;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+/* Glossy hover effect */
+.hover-icon::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+}
+
+.hover-icon:hover::before {
+  opacity: 1;
+}
+
+.hover-icon:hover {
+  transform: scale(1.2);
+  background: linear-gradient(135deg, rgba(0, 255, 0, 0.6), rgba(0, 128, 0, 0.6));
+  /* Green gradient on hover */
+}
+
+.hover-icon:hover svg {
+  color: black !important;
+  /* Change icon color on hover */
+}
+
+.footer-links-sub-column {
+  margin-bottom: 1px;
+  /* Adjust the value as needed */
+}
