--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -6,7 +6,7 @@
   /* Default text color */
   text-decoration: none;
   transition: color 0.3s ease, transform 0.3s ease;
-  padding: 8px 0;
+  /* padding: 8px 0; */
   border-radius: 4px;
   margin: 0;
   display: inline-block;
